build_log.txt
   Compiling wallp v0.1.0 (C:\home\code\wallp)
warning: unused import: `ConfigArgs`
 --> src\cli.rs:1:23
  |
1 | use crate::{Commands, ConfigArgs, ConfigAction};
  |                       ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Config`
 --> src\cli.rs:2:30
  |
2 | use crate::config::{AppData, Config};
  |                              ^^^^^^

warning: unused import: `MultiSelect`
 --> src\cli.rs:5:33
  |
5 | use dialoguer::{Input, Confirm, MultiSelect};
  |                                 ^^^^^^^^^^^

warning: unused import: `Path`
 --> src\config.rs:2:17
  |
2 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `Context`
 --> src\manager.rs:3:14
  |
3 | use anyhow::{Context, Result};
  |              ^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\manager.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `tao::platform::windows::EventLoopBuilderExtWindows`
 --> src\tray.rs:4:5
  |
4 | use tao::platform::windows::EventLoopBuilderExtWindows; // For Windows-specific if needed, but standard new() is fine usually.
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `query` found for struct `RequestBuilder` in the current scope
  --> src\unsplash.rs:59:14
   |
56 |           let response = self.client
   |  ________________________-
57 | |             .get(url)
58 | |             .header("Authorization", format!("Client-ID {}", self.access_key))
59 | |             .query(&[
   | |             -^^^^^ method not found in `RequestBuilder`
   | |_____________|
   |

error[E0282]: type annotations needed
  --> src\unsplash.rs:56:24
   |
56 |           let response = self.client
   |  ________________________^
57 | |             .get(url)
58 | |             .header("Authorization", format!("Client-ID {}", self.access_key))
59 | |             .query(&[
...  |
64 | |             .send()
65 | |             .await
   | |__________________^ cannot infer type

error[E0282]: type annotations needed
  --> src\unsplash.rs:70:25
   |
70 |              let text = response.text().await.unwrap_or_default();
   |                         ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\unsplash.rs:74:42
   |
74 |         let photos: Vec<UnsplashPhoto> = response.json().await
   |                                          ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

warning: use of deprecated method `auto_launch::AutoLaunchBuilder::set_use_launch_agent`: Use `set_macos_launch_mode` instead
  --> src\cli.rs:74:10
   |
74 |         .set_use_launch_agent(false) 
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: unused variable: `app_data`
  --> src\manager.rs:42:54
   |
42 | fn set_wallpaper_from_history(wallpaper: &Wallpaper, app_data: &AppData) -> Result<()> {
   |                                                      ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_app_data`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `wallp` (bin "wallp") generated 9 warnings
error: could not compile `wallp` (bin "wallp") due to 4 previous errors; 9 warnings emitted
